rolled back z-index approach in favor of appending sticky-promo-bar at end of DOM to avoid any z-index context issues altogether in the future

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -1,6 +1,7 @@
 .faqv2 {
   --color-light-grey: #717171;
   position: relative;
+  z-index: 1;
   height: auto;
 }
 
